--- a/404erro.html
+++ b/404erro.html
@@ -21,6 +21,8 @@
         <button class="nav__toggle" aria-label="Menu"
             onclick="toggleMenu()"><span></span><span></span><span></span></button>
         <nav class="nav" id="nav">
+            <button onclick="toggleTheme()" class="btn-theme-toggle" id="themeToggleBtn"
+                aria-label="Alterar Tema">🌓</button>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzutsVwemh96pyEjzr5rRZK1sToBKhgz5D7gs1oZEnQQHU1Q/viewform?usp=dialog"
                 class="nav__link nav__link--highlight">Junta-te ao Clube!</a>
             <a href="cartaz.html" class="nav__link">Em Cartaz</a>
