--- a/antigos.html
+++ b/antigos.html
@@ -17,11 +17,24 @@
 </head>
 
 <body>
+    <!-- Theme Initializer -->
+    <script>
+        (function () {
+            const savedTheme = localStorage.getItem('theme');
+            if (savedTheme) {
+                document.documentElement.setAttribute('data-theme', savedTheme);
+            } else if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
+                document.documentElement.setAttribute('data-theme', 'dark');
+            }
+        })();
+    </script>
     <header class="header">
         <a href="index.html" class="header__logo"><img src="teatro.png" alt="Clube de Teatro Logo"></a>
         <button class="nav__toggle" aria-label="Menu"
             onclick="toggleMenu()"><span></span><span></span><span></span></button>
         <nav class="nav" id="nav">
+            <button onclick="toggleTheme()" class="btn-theme-toggle" id="themeToggleBtn"
+                aria-label="Alterar Tema">🌓</button>
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfzutsVwemh96pyEjzr5rRZK1sToBKhgz5D7gs1oZEnQQHU1Q/viewform?usp=dialog"
                 class="nav__link nav__link--highlight">Junta-te ao Clube!</a>
             <a href="cartaz.html" class="nav__link">Em Cartaz</a>
