--- a/admin.html
+++ b/admin.html
@@ -335,7 +335,7 @@
                 </section>
 
                 <!-- SECTION: POS (Point of Sale) -->
-                <section id="posSection" class="admin-section">
+                <section id="posSection" class="admin-section" style="display: none;">
                     <div class="pos-layout-grid">
 
                         <!-- Left Panel: Search & Pending List -->
