--- a/contatos.html
+++ b/contatos.html
@@ -101,9 +101,9 @@
                 <!-- Form Column -->
                 <div class="card" style="padding: 0; overflow: hidden; height: 650px;">
                     <iframe
-                        src="https://docs.google.com/forms/d/e/1FAIpQLSdKMhULECOu92UbNHN0JBySYg1o2IqjkOQe8SaVvhhNykjCMg/viewform?embedded=true"
-                        title="Formulário de Contacto" style="width: 100%; height: 100%; border:0;">
-                        A carregar…
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3113.686690982478!2d-9.431779423642515!3d38.7020405582067!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1ec424acdd3059%3A0x2e548b5e9dcbc7df!2sEscola%20B%C3%A1sica%20e%20Secund%C3%A1ria%20da%20Cidadela!5e0!3m2!1spt-PT!2spt!4v1771947882283!5m2!1spt-PT!2spt"
+                        title="Localização da Escola BS da Cidadela" style="width: 100%; height: 100%; border:0;"
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                     </iframe>
                 </div>
 
